# hut

./: .pre-commit-config.yaml  COPYING  Cargo.toml  README.md
.github/workflows/: main.yml
data/: 000c_consumer_devices.hut  0012_eye_and_head_trackers.hut  HidUsageTables.json  ff0d-Wacom.json
src/: lib.rs  lib.rs.jinja
tools/: hut-parser.py
